# idmangler-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build_x64.sh  config.json  config.md  config_crafted.json  config_hanafupookie.json  config_medallion.json  config_singu.json  rustfmt.toml  values.json
docs/: config.md
docs/blocks/: identifications.md  name.md  powder.md  powderlimit.md  powders.md  reroll.md  shiny.md  type.md
example_configs/: config_abnormalwarp.json  config_hanafupookie.json  config_tome.json  config_warpshinyv2.json  selv.json
idlib/: Cargo.toml
idlib/src/: encoding.rs
idlib/src/data_transformer/: enddata.rs  identdata.rs  mod.rs  namedata.rs  powderdata.rs  rerolldata.rs  shinydata.rs  startdata.rs  typedata.rs
idlib/src/types/: itemtype.rs  stat.rs  transform.rs
src/: cookers.rs  encode.rs  errorfr.rs  gearjson.rs  jsondl.rs  jsonstruct.rs  main.rs
src/cookers/: cconsu.rs  cgear.rs  charm.rs  gear.rs  mod.rs  tome.rs
src/errorfr/: mod.rs
src/errors/: mod.rs
src/structures/: mod.rs
