[package]
name = "idmangler-cli"
authors = ["endernon"]
version = "0.4.2"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A cli tool to generate fake wynntils items"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
idmangler-lib = "0.4.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.1.0"
thiserror = "2.0.9"
