[package]
name = "idmangler-cli"
authors = ["endernon"]
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A cli tool to generate fake wynntils items"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
idmangler-lib = { version = "0.5.0", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde_json5 = "0.1.0"
thiserror = "2.0.11"
