[package]
name = "idmangler-cli"
authors = ["endernon"]
version = "0.6.1"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A cli tool to generate fake wynntils items"
repository = "https://git.frfrnocap.men/endernon/idmangler-cli"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
idmangler-lib = { version = "0.6.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
serde_json5 = "0.1.0"
thiserror = "2.0.11"
